[gd_scene load_steps=6 format=2]

[ext_resource path="res://boid.gd" type="Script" id=1]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.001

[sub_resource type="SpatialMaterial" id=2]
params_blend_mode = 1
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereShape" id=3]
radius = 0.548712

[sub_resource type="SphereShape" id=4]
radius = 0.499074

[node name="boid" type="KinematicBody"]
script = ExtResource( 1 )

[node name="boid" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -2.44381e-07, 1, 0, -1.5, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="FlockView" type="Area" parent="."]

[node name="view_radius" type="CollisionShape" parent="FlockView"]
shape = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 4 )
[connection signal="body_entered" from="FlockView" to="." method="_on_FlockView_body_entered"]
[connection signal="body_exited" from="FlockView" to="." method="_on_FlockView_body_exited"]
